renaming server.js to worker.js and adding Procfile

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cosm_test_data_generator",
-  "version": "0.0.0",
-  "bin": {
-    "cosm_test_data_generator": "./server.js"
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node worker.js"
   },
   "dependencies": {
     "request": "2.9.202",
