Adding node version to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "scripts": {
     "start": "node worker.js"
   },
+  "engines": {
+    "node": "0.6.x",
+    "npm":  "1.0.x"
+  },
   "dependencies": {
     "request": "2.9.202",
     "nconf": "0.5.1"
